--- a/client/package.json
+++ b/client/package.json
@@ -43,5 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },"proxy":"http://localhost:7000/api"
+  },"proxy":"https://booking-app-backend-bw17.onrender.com"
 }
